packages/lang/test/__golden__/errors/unique-password-unsupported.txt
error[TF010]: expected `(…)`, `email`, `number`, `like`, or `uuid` after `unique`, found `password`
 --> unique-password-unsupported.tflw:2:20
  |
2 |   let bad = unique password
  |                    ^^^^^^^^
